# StreamSoftNative

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build_and_run.bat  chat_commands.json  chat_commands.py  config.py  main.py  models.py  moderation.py  overlay_server.py  requirements.txt  runtime_settings.py  rvc_client.py  rvc_launcher.py  settings_app.py  telegram_control.py  telegram_notify.py  tts_worker.py  twitch_auth.py  twitch_chat.py  twitch_eventsub.py  vcpkg.json  youtube_chat.py
.github/workflows/: release.yml
StreamSoftNative/: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  build_installer.bat
StreamSoftNative/adapters/rvc/: server.py
StreamSoftNative/core/: CMakeLists.txt
StreamSoftNative/core/include/: app_paths.hpp  audio_ducking.hpp  auto_update.hpp  autostart.hpp  bet_manager.hpp  chat_commands.hpp  connections_config.hpp  core_app.hpp  discord_presence.hpp  env_config.hpp  faceit_client.hpp  file_logger.hpp  gpu_check.hpp  gsi_state.hpp  moderation.hpp  module_installer.hpp  obs_client.hpp  obs_multirtmp.hpp  obs_scene_file.hpp  opendota_client.hpp  outgoing_queue.hpp  overlay_server.hpp  points.hpp  poll.hpp  process_watch.hpp  runtime_settings.hpp  rvc_launcher.hpp  song_queue.hpp  stream_templates.hpp  telegram.hpp  tts_launcher.hpp  tts_worker.hpp  twitch_auth.hpp  twitch_chat.hpp  twitch_eventsub.hpp  youtube_auth.hpp  youtube_chat.hpp
StreamSoftNative/core/src/: main.cpp
StreamSoftNative/core/web/: cs2hud.html  faceit.html  index.html  nowplaying.html  poll.html
StreamSoftNative/core/web/static/: app.js  style.css
StreamSoftNative/gui/: CMakeLists.txt  api_client.hpp  main.cpp  overlay_ws_client.cpp  overlay_ws_client.hpp
StreamSoftNative/gui/qml/: Main.qml  Theme.qml
StreamSoftNative/gui/qml/components/: CollapsibleCard.qml  GlassComboBox.qml  GlassSlider.qml  GlassSurface.qml  GlassTextField.qml  GlassToggle.qml  LinkChip.qml  ModuleInstallCard.qml  NavButton.qml  NavIcon.qml  PillButton.qml  SectionHeader.qml  Star.qml
StreamSoftNative/gui/qml/pages/: AlertsPage.qml  CommandsPage.qml  ConnectionsPage.qml  Cs2Page.qml  DotaPage.qml  FaceitPage.qml  GameBannerPage.qml  MusicPage.qml  MutedPage.qml  OverlayPage.qml  PointsPage.qml  PollPage.qml  RvcPage.qml  SettingsPage.qml  TtsPage.qml  UpdatesPage.qml  VoicePage.qml
StreamSoftNative/installer/: streamsoft.iss
adapters/rvc/: requirements.txt  start.bat
adapters/tts/: server.py
core/include/: app_paths.hpp  auto_update.hpp  autostart.hpp  chat_commands.hpp  connections_config.hpp  core_app.hpp  dota_gsi_state.hpp  dota_steam_paths.hpp  faceit_client.hpp  faceit_shared_key.hpp  faceit_stats.hpp  file_logger.hpp  gif_store.hpp  gsi_state.hpp  opendota_client.hpp  outgoing_queue.hpp  overlay_server.hpp  points.hpp  runtime_settings.hpp  rvc_launcher.hpp  song_queue.hpp  steam_paths.hpp  telegram.hpp  tts_launcher.hpp  twitch_auth.hpp  twitch_chat.hpp  twitch_eventsub.hpp  yt_resolve.hpp
core/src/: main.cpp
core/web/: chat.html  events.html  faceit.html  index.html
core/web/static/: game-banner-cs2.js  game-banner-dota.js  style.css
docs/: BUILD.md
docs/ideas/: rvc-voice-cloning.md
gui/: CMakeLists.txt  api_client.cpp  api_client.hpp  app_icon.rc  overlay_ws_client.cpp  overlay_ws_client.hpp
gui/qml/: Main.qml
gui/qml/components/: GlassCard.qml  GlassSlider.qml  GlassSurface.qml  GlassTextField.qml  GlassToggle.qml  MediaSlot.qml  NavButton.qml  NavIcon.qml  PillButton.qml  SectionHeader.qml  Star.qml
gui/qml/pages/: CommandsPage.qml  ConnectionsPage.qml  Cs2Page.qml  DotaPage.qml  FaceitPage.qml  GifsPage.qml  MutedPage.qml  OverlayPage.qml  PointsPage.qml  SettingsPage.qml  SocialPage.qml  UpdatesPage.qml  VoicePage.qml
gui/shaders/: glass.frag  glass.vert
installer/: streamsoft.iss
overlay/: app.js  settings.css  settings.html  settings.js  style.css
overlay/media/: README.txt
rvc_service/: requirements.txt  server.py  start.bat
